fixing responsiveness of nav and media queries

--- a/index.html
+++ b/index.html
@@ -33,17 +33,15 @@
             <li class="nav-link"><a href="product.html">shop</a></li>
             <li class="nav-link"><a href="about.html">about</a></li>
             <li class="nav-link"><a href="#">contact</a></li>
-          </ul>
-          <ul class="nav-menu">
-            <li class="search">search</li>
-            <li class="cart">cart</li>
+            <li class="nav-link"><a href="#">search</a></li>
+            <li class="nav-link"><a href="#">cart</a></li>
           </ul>
         </div>
         <div class="burger-container">
           <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
           </div>
         </div>
       </nav>
