changed background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </script>
     <title>RainyDays|All Weather Jackets Home</title>
   </head>
-  <body class="body__home"> 
+  <body> 
     <header class="header__home">
       <nav>
         <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
@@ -61,7 +61,7 @@
       </nav> -->
     </header>
     <main>
-      <section class="home__main-container">
+      <section class="home-container">
         <div class="text-left">
           <img src="/images/icons/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
           <a href="jackets.html" class="cta__home">Our Jackets</a>
