--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
       </nav> -->
     </header>
     <main>
-      <section class="home-container">
-        <div class="text-left">
-          <img src="/images/icons/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
-          <a href="jackets.html" class="cta__home">Our Jackets</a>
-        </div>
-        <div class="social-right">
-          <ul class="social-icons">
-            <li class="social-link"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-            <li class="social-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-          </ul>
-        </div>
-      </section>
-      <p class="licence">Photo by <a href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Earle</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-      </p>
+      <div class="image-container">
+        <ul class="social-icons">
+          <li class="social-link"><a href="#"><i class="fas fa-search"></i></a></li>
+          <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+          <li class="social-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
+        </ul>
+        <section class="home-container">
+          <div class="text-left">
+            <img src="/images/icons/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone" class="home__text">
+            <a href="jackets.html" class="cta__home">Our Jackets</a>
+          </div>
+          <p class="licence">Photo by <a href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua Earle</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+          </p>
+        </section>
+      </div>
     </main>
     <script src="/js/main.js"></script>
   </body>
