ajusting nav responsiveness

--- a/index.html
+++ b/index.html
@@ -27,23 +27,26 @@
   <body> 
     <header class="header__home">
       <nav>
-        <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
-        <div class="list-box">
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="product.html">shop</a></li>
-            <li class="nav-link"><a href="about.html">about</a></li>
-            <li class="nav-link"><a href="#">contact</a></li>
-            <li class="nav-link"><a href="#">search</a></li>
-            <li class="nav-link"><a href="#">cart</a></li>
-          </ul>
-        </div>
-        <div class="burger-container">
-          <div class="hamburger">
-            <div class="strip"></div>
-            <div class="strip"></div>
-            <div class="strip"></div>
+          <div class="list-box">
+            <div class="logo">
+              <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
+            </div>
+            <ul class="nav-menu">
+              <li class="nav-link"><a href="product.html">shop</a></li>
+              <li class="nav-link"><a href="about.html">about</a></li>
+              <li class="nav-link"><a href="#">contact</a></li>
+            </ul>
+            <ul class="nav-menu">
+              <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
+              <li class="nav-link"><a href="#">cart</a></li>
+            </ul>
+            <div class="hamburger">
+              <div class="strip"></div>
+              <div class="strip"></div>
+              <div class="strip"></div>
+            </div>
           </div>
-        </div>
+       
       </nav>
       
 
