--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
           <li class="nav-link sub-link"><a href="#">cart</a></li>
+          <ul class="social-icons-mobile">
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
+          </ul>
         </ul>
         <ul class="nav-menu">
           <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
