added new nav to all pages

--- a/product.html
+++ b/product.html
@@ -22,13 +22,37 @@
     <title>Calderon Jacket|RainyDays</title>
   </head>
   <body class="body__jackets">
-    <header class="header__jackets">
-      <h1>Calderon Jacket</h1>
-      <nav class="nav__all">
-        <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo logo"></a>
-        <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-        <a href="checkout.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
-        <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
+    <header class="header__home">
+      <nav>
+        <div class="list-box">
+          <div class="logo">
+            <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+                class="logo"></a>
+          </div>
+          <ul class="nav-menu">
+            <li class="nav-link"><a href="product.html">shop</a></li>
+            <li class="nav-link"><a href="about.html">about</a></li>
+            <li class="nav-link"><a href="#">contact</a></li>
+            <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
+            <li class="nav-link sub-link"><a href="#">cart</a></li>
+            <ul class="social-icons-mobile">
+              <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+              <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              </li>
+            </ul>
+          </ul>
+          <ul class="nav-menu">
+            <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
+            <li class="nav-link"><a href="#">cart</a></li>
+          </ul>
+          <div class="hamburger">
+            <div class="strip"></div>
+            <div class="strip"></div>
+            <div class="strip"></div>
+          </div>
+        </div>
       </nav>
     </header>
     <main class="product__main">
@@ -42,5 +66,6 @@
         <a href="checkout.html" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
       </div>
     </main>
+    <script src="/js/main.js"></script>
   </body>
 </html>
