--- a/about.html
+++ b/about.html
@@ -22,13 +22,37 @@
   <title>RainyDays|About Us</title>
 </head>
 <body class="body__about">
-  <header class="header-about">
-    <h1>About Us</h1>
-    <nav class="nav__all">
-      <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo"></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-search"></i></a>
-      <a href="checkout.html" class="nav__symbols"><i class="fas fa-shopping-bag"></i></a>
-      <a href="#" class="nav__symbols"><i class="fas fa-bars"></i></a>
+  <header class="header__home">
+    <nav>
+      <div class="list-box">
+        <div class="logo">
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+              class="logo"></a>
+        </div>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="product.html">shop</a></li>
+          <li class="nav-link"><a href="about.html">about</a></li>
+          <li class="nav-link"><a href="#">contact</a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
+          <li class="nav-link sub-link"><a href="#">cart</a></li>
+          <ul class="social-icons-mobile">
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
+          </ul>
+        </ul>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
+          <li class="nav-link"><a href="#">cart</a></li>
+        </ul>
+        <div class="hamburger">
+          <div class="strip"></div>
+          <div class="strip"></div>
+          <div class="strip"></div>
+        </div>
+      </div>
     </nav>
   </header>
   <main>
@@ -71,5 +95,6 @@
       </div>
     </section>
   </main>
+  <script src="/js/main.js"></script>
 </body>
 </html>
