mobile menu last touches

--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
-          <li class="nav-link sub-link"><a href="#">cart</a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fa-solid fa-basket-shopping-simple"></i></a></li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
