--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
-          <li class="nav-link sub-link"><a href="#">cart</a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
             <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -56,7 +56,7 @@
         </ul>
         <ul class="nav-menu">
           <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
-          <li class="nav-link"><a href="#">cart</a></li>
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
         </ul>
         <div class="hamburger">
           <div class="strip"></div>
@@ -69,7 +69,6 @@
   <main>
     <div class="image-container">
       <ul class="social-icons">
-        <li class="social-link"><a href="#"><i class="fas fa-search"></i></a></li>
         <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
         </li>
