--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
           </ul>
         </ul>
         <ul class="nav-menu">
-          <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
           <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
         </ul>
         <div class="hamburger">
@@ -77,8 +76,11 @@
       </ul>
       <section class="home-container">
         <div class="text-left">
-          <img src="/images/icons/rainydays_logo_text.png" alt="Rainy Days, Pushing the comfort zone"
-            class="home__text">
+          <div class="home-logo">
+            <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone"
+              class="home__text">
+              <h1>that one jacket that you can trust</h1>
+          </div>
           <a href="jackets.html" class="cta__home">Our Jackets</a>
         </div>
         <p class="licence">Photo by <a
@@ -89,6 +91,9 @@
       </section>
     </div>
   </main>
+  <footer>
+
+  </footer>
   <script src="/js/main.js"></script>
 </body>
 
