--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               class="logo"></a>
         </div>
         <ul class="nav-menu">
-          <li class="nav-link"><a href="product.html">shop</a></li>
+          <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
@@ -66,7 +66,7 @@
     </nav>
   </header>
   <main>
-    <div class="image-container">
+    <section class="home-container">
       <ul class="social-icons">
         <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
         <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -74,7 +74,7 @@
         <li class="social-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
         </li>
       </ul>
-      <section class="home-container">
+      <section class="home-content">
         <div class="text-left">
           <div class="home-logo">
             <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone"
@@ -89,7 +89,7 @@
             href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
         </p>
       </section>
-    </div>
+    </section>
   </main>
   <footer>
 
