fixing hexagon trash on jackets page

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
               class="logo"></a>
         </div>
         <ul class="nav-menu">
-          <li class="nav-link"><a href="product.html">shop</a></li>
+          <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
