--- a/jackets.html
+++ b/jackets.html
@@ -30,7 +30,7 @@
               class="logo"></a>
         </div>
         <ul class="nav-menu">
-          <li class="nav-link"><a href="product.html">shop</a></li>
+          <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
@@ -56,18 +56,103 @@
     </nav>
   </header>
   <main>
-    <div class="grid-container__jackets">
-      <h2>can you read this</h2>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      <a href="product.html"><img class="hex-img-large__jackets item1 hex-img" src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="Young woman in a yellow jacket standing on top of a cliff overviewing coastline looking towards the camera "></a>
-      
-    </div>
+    <section class="jackets">
+      <div class="title">
+        <h2 class="title-text">choose the one jacket that you can really trust</h2>
+      </div>
+      <div class="content">
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/blake-lisk-swdM6_NFnCs-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Calderon</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Begsby</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/janko-ferlic-_A1V4vuyXWM-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Aeiron</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/kal-visuals-6TIoPIpMvLc-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Vendela</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/daniel-lincoln-kTChmgdTkwE-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Gedola</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/dmitry-kara-YVkUmYAIJ5Y-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Edilaso</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Selinium</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/erik-brolin-2_cIV9J4NT8-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Dizela</h3>
+            </a>
+          </div>
+        </div>
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/fil-mazzarino-7IimdEvrXH4-unsplash.jpg" alt="">
+          </div>
+          <div class="text">
+            <a href="product.html" class="cta__home btn">
+              <h3>Dizela</h3>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
   <script src="/js/main.js"></script>
 </body>
