--- a/jackets.html
+++ b/jackets.html
@@ -58,7 +58,7 @@
   <main>
     <section class="jackets">
       <div class="title">
-        <h2 class="title-text">choose the one jacket that you can really trust</h2>
+        <h1 class="title-text">choose the one you can trust</h1>
       </div>
       <div class="content">
         <div class="box">
