product page start

--- a/product.html
+++ b/product.html
@@ -55,16 +55,30 @@
         </div>
       </nav>
     </header>
-    <main class="product__main">
-      <div>
-        <img src="/images/photos/pexels-monicore-134068.jpg" alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top" class="background__img">
-      </div>
-      <div class="inserts__container">
-        <img src="/images/icons/Inserts.png" alt="jacket info graphics" class="inserts__png">
-      </div>
-      <div class="button__container">
-        <a href="checkout.html" class="button__product"><i class="fas fa-shopping-bag"></i>Add to bag</a>
-      </div>
+    <main>
+      <section class="product">
+        <div class="container">
+          <div class="box">
+            <div class="img-box">
+              <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
+            </div>
+            <div class="options-box">
+              <div class="colours">
+                <div class="swatch one"></div>
+                <div class="swatch two"></div>
+                <div class="swatch three"></div>
+              </div>
+              <div class="box-size">
+                <div class="size"><h2>xs</h2></div>
+                <div class="size"><h2>s</h2></div>
+                <div class="size"><h2>m</h2></div>
+                <div class="size"><h2>l</h2></div>
+                <div class="size"><h2>xl</h2></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="/js/main.js"></script>
   </body>
