updating class lists

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
   <title>RainyDays|About Us</title>
 </head>
 <body class="body__about">
-  <header class="header__home">
+  <header>
     <nav>
       <div class="list-box">
         <div class="logo">
