--- a/checkout.html
+++ b/checkout.html
@@ -22,7 +22,7 @@
     <title>RainyDays|Checkout page</title>
   </head>
   <body class="body__jackets">
-    <header class="header__home">
+    <header>
       <nav>
         <div class="list-box">
           <div class="logo">
