--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 </head>
 
 <body>
-  <header class="header__home">
+  <header>
     <nav>
       <div class="list-box">
-        <div class="logo">
+        <div class="logo-box">
           <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
               class="logo"></a>
         </div>
@@ -44,7 +44,6 @@
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
