--- a/jackets.html
+++ b/jackets.html
@@ -22,7 +22,7 @@
   <title>RainyDays|All Jackets</title>
 </head>
 <body class="body__jackets">
-  <header class="header__home">
+  <header>
     <nav>
       <div class="list-box">
         <div class="logo">
