--- a/product.html
+++ b/product.html
@@ -22,7 +22,7 @@
     <title>Calderon Jacket|RainyDays</title>
   </head>
   <body class="body__jackets">
-    <header class="header__home">
+    <header>
       <nav>
         <div class="list-box">
           <div class="logo">
