--- a/index.html
+++ b/index.html
@@ -46,10 +46,13 @@
           <li class="nav-link"><a href="#">contact</a></li>
           <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
           <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i
+                  class="fab fa-twitter"></i></a></li>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i
+                  class="fab fa-instagram"></i></a>
             </li>
-            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i
+                  class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
         </ul>
@@ -74,11 +77,11 @@
         </li>
       </ul>
       <section class="home-content">
-        <div class="text-left">
+        <div class="home-box">
           <div class="home-logo">
             <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone"
               class="home__text">
-              <h1>that one jacket that you can trust</h1>
+            <h1>that one jacket that you can trust</h1>
           </div>
           <a href="jackets.html" class="cta__home">Our Jackets</a>
         </div>
