never ending nav issues

--- a/checkout.html
+++ b/checkout.html
@@ -1,98 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Welcome to the Official RainyDays Online Store. Shop RainyDays Jackets for skiing, canooing, biking, trekking and all other Outddoor activities. ">
-    <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-    <link rel="stylesheet" href="Css/styles.css">
-    <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2968691,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content=" Welcome to the Official RainyDays Online Store. Shop RainyDays Jackets for skiing, canooing, biking, trekking and all other Outddoor activities. ">
+  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
+  <link rel="stylesheet" href="Css/styles.css">
+  <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () {
+        (h.hj.q = h.hj.q || []).push(arguments)
+      };
+      h._hjSettings = {
+        hjid: 2968691,
+        hjsv: 6
+      };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script');
+      r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
       a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-    <title>RainyDays|Checkout page</title>
-  </head>
-  <body class="body__jackets">
-    <header>
-      <nav>
-        <div class="list-box">
-          <div class="logo">
-            <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
-                class="logo"></a>
-          </div>
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="jackets.html">shop</a></li>
-            <li class="nav-link"><a href="about.html">about</a></li>
-            <li class="nav-link"><a href="#">contact</a></li>
-            <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="nav-link sub-link"><a href="#">cart</a></li>
-            <ul class="social-icons-mobile">
-              <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-              <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-              </li>
-              <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              </li>
-            </ul>
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+  <title>RainyDays|Checkout page</title>
+</head>
+
+<body class="body__jackets">
+  <header>
+    <nav>
+      <div class="list-box">
+        <div class="logo-box">
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+              class="logo"></a>
+        </div>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="jackets.html">shop</a></li>
+          <li class="nav-link"><a href="about.html">about</a></li>
+          <li class="nav-link"><a href="#">contact</a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
+          <ul class="social-icons-mobile">
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
           </ul>
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="nav-link"><a href="#">cart</a></li>
-          </ul>
-          <div class="hamburger">
-            <div class="strip"></div>
-            <div class="strip"></div>
-            <div class="strip"></div>
-          </div>
+        </ul>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <div class="strip"></div>
+          <div class="strip"></div>
+          <div class="strip"></div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="checkout__container">
-        <div class="images__checkout">
-          <img src="/images/photos/2.png" alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top in the fog" class="hex-img checkout__img">
-          <img src="/images/photos/6.png" alt="Profile portrait view of a bearded man in a red rain jacket with a backpack in the woods" class="hex-img checkout__img">
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="checkout__container">
+      <div class="images__checkout">
+        <img src="/images/photos/2.png"
+          alt="Young Woman wearing a blue jacket and hiking gear walking on a snowy mountain top in the fog"
+          class="hex-img checkout__img">
+        <img src="/images/photos/6.png"
+          alt="Profile portrait view of a bearded man in a red rain jacket with a backpack in the woods"
+          class="hex-img checkout__img">
+      </div>
+      <div class="total__checkout images__checkout">
+        <h2>Total</h2>
+        <img src="/images/icons/3324949_bag_shopping_icon_150.png" alt="" class="shopping-bag">
+        <h2>$ 585</h2>
+      </div>
+      <div class="button-checkout__container">
+        <a href="#" class="button__checkout">Continue</a>
+      </div>
+    </section>
+    <section class="progressbar__checkout">
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
         </div>
-        <div class="total__checkout images__checkout">
-          <h2>Total</h2>
-          <img src="/images/icons/3324949_bag_shopping_icon_150.png" alt="" class="shopping-bag">
-          <h2>$ 585</h2>
+        <span class="progressbar-tags">Items</span>
+      </div>
+      <div class="line"></div>
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
         </div>
-        <div class="button-checkout__container">
-          <a href="#" class="button__checkout">Continue</a>
+        <span class="progressbar-tags">Details</span>
+      </div>
+      <div class="line"></div>
+      <div class="circle-container">
+        <div class="circle">
+          <div class="circle2"></div>
         </div>
-      </section>
-      <section class="progressbar__checkout">
-        <div class="circle-container">
-          <div class="circle">
-            <div class="circle2"></div>
-          </div>
-          <span class="progressbar-tags">Items</span>
-        </div>
-        <div class="line"></div>
-        <div class="circle-container">
-          <div class="circle">
-            <div class="circle2"></div>
-          </div>
-          <span class="progressbar-tags">Details</span>
-        </div>
-        <div class="line"></div>
-        <div class="circle-container">
-          <div class="circle">
-            <div class="circle2"></div>
-          </div>
-          <span class="progressbar-tags">Payment</span>
-        </div>
-      </section>
-    </main>
-    <script src="/js/main.js"></script>
-  </body>
+        <span class="progressbar-tags">Payment</span>
+      </div>
+    </section>
+  </main>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
