--- a/about.html
+++ b/about.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content=" We are a brand committed to serving all those who desire to explore. Our dedication endures further to protecting our natural wild lands by helping to conserve them. ">
+  <meta name="description"
+    content=" We are a brand committed to serving all those who desire to explore. Our dedication endures further to protecting our natural wild lands by helping to conserve them. ">
   <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
   <link rel="stylesheet" href="Css/styles.css">
   <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2968691,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () {
+        (h.hj.q = h.hj.q || []).push(arguments)
+      };
+      h._hjSettings = {
+        hjid: 2968691,
+        hjsv: 6
+      };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script');
+      r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
       a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
   <title>RainyDays|About Us</title>
 </head>
+
 <body class="body__about">
   <header>
     <nav>
       <div class="list-box">
-        <div class="logo">
+        <div class="logo-box">
           <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
               class="logo"></a>
         </div>
@@ -33,10 +42,10 @@
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
-          <li class="nav-link sub-link"><a href="#"><i class="fa-solid fa-basket-shopping-simple"></i></a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
           <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
             <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             </li>
             <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
@@ -44,8 +53,8 @@
           </ul>
         </ul>
         <ul class="nav-menu">
-          <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
-          <li class="nav-link"><a href="#">cart</a></li>
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          </li>
         </ul>
         <div class="hamburger">
           <div class="strip"></div>
@@ -57,7 +66,8 @@
   </header>
   <main>
     <section class="top-section">
-      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg" alt="A birds eye view of a group of climbers going up a snowy mountain" class="background-about">
+      <img src="/images/photos/tim-jones-NQjvaCYp0h4-unsplash.jpg"
+        alt="A birds eye view of a group of climbers going up a snowy mountain" class="background-about">
       <div class="text__about top-text__about">
         <p>
           No matter the weather
@@ -82,19 +92,30 @@
     </section>
     <section class="about-grid">
       <div class="about-grid-item">
-        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg" alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background" class="image-left">
+        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg"
+          alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background"
+          class="image-left">
       </div>
       <div class="about-grid-item">
-        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg" alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front" class="image-right">
+        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg"
+          alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front"
+          class="image-right">
       </div>
       <div class="about-grid-item about-grid-item-text1">
-        <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.</p>
+        <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our
+          natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond
+          with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.
+        </p>
       </div>
       <div class="about-grid-item grid-col-span-2 about-grid-item-text2">
-        <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is as they say, history…</p>
+        <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain
+          jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the
+          Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is
+          as they say, history…</p>
       </div>
     </section>
   </main>
   <script src="/js/main.js"></script>
 </body>
+
 </html>
