--- a/index.html
+++ b/index.html
@@ -44,20 +44,16 @@
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          </li>
           <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i
-                  class="fab fa-twitter"></i></a></li>
-            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i
-                  class="fab fa-instagram"></i></a>
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
-            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i
-                  class="fab fa-facebook-f"></i></a>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
-        </ul>
-        <ul class="nav-menu">
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
         </ul>
         <div class="hamburger">
           <div class="strip"></div>
@@ -79,8 +75,7 @@
       <section class="home-content">
         <div class="home-box">
           <div class="home-logo">
-            <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone"
-              class="home__text">
+            <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone">
             <h1>that one jacket that you can trust</h1>
           </div>
           <a href="jackets.html" class="cta__home">Our Jackets</a>
