--- a/product.html
+++ b/product.html
@@ -1,85 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" The Calderon Rain Jacket is a design for active usage through differing temperatures making a versatile package as the outer shell, as well as with the zip out fleece, is wearable on its own.">
-    <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-    <link rel="stylesheet" href="Css/styles.css">
-    <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
-<script>
-  (function(h,o,t,j,a,r){
-      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-      h._hjSettings={hjid:2968691,hjsv:6};
-      a=o.getElementsByTagName('head')[0];
-      r=o.createElement('script');r.async=1;
-      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description"
+    content=" The Calderon Rain Jacket is a design for active usage through differing temperatures making a versatile package as the outer shell, as well as with the zip out fleece, is wearable on its own.">
+  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
+  <link rel="stylesheet" href="Css/styles.css">
+  <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
+  <script>
+    (function (h, o, t, j, a, r) {
+      h.hj = h.hj || function () {
+        (h.hj.q = h.hj.q || []).push(arguments)
+      };
+      h._hjSettings = {
+        hjid: 2968691,
+        hjsv: 6
+      };
+      a = o.getElementsByTagName('head')[0];
+      r = o.createElement('script');
+      r.async = 1;
+      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
       a.appendChild(r);
-  })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-</script>
-    <title>Calderon Jacket|RainyDays</title>
-  </head>
-  <body class="body__jackets">
-    <header>
-      <nav>
-        <div class="list-box">
-          <div class="logo">
-            <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
-                class="logo"></a>
+    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+  </script>
+  <title>Calderon Jacket|RainyDays</title>
+</head>
+
+<body class="body__jackets">
+  <header>
+    <nav>
+      <div class="list-box">
+        <div class="logo-box">
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+              class="logo"></a>
+        </div>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="jackets.html">shop</a></li>
+          <li class="nav-link"><a href="about.html">about</a></li>
+          <li class="nav-link"><a href="#">contact</a></li>
+          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
+          <ul class="social-icons-mobile">
+            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
+          </ul>
+        </ul>
+        <ul class="nav-menu">
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <div class="strip"></div>
+          <div class="strip"></div>
+          <div class="strip"></div>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <section class="product">
+      <div class="container">
+        <div class="box">
+          <div class="img-box">
+            <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
           </div>
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="jackets.html">shop</a></li>
-            <li class="nav-link"><a href="about.html">about</a></li>
-            <li class="nav-link"><a href="#">contact</a></li>
-            <li class="nav-link sub-link"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="nav-link sub-link"><a href="#">cart</a></li>
-            <ul class="social-icons-mobile">
-              <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-              <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-              </li>
-              <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              </li>
-            </ul>
-          </ul>
-          <ul class="nav-menu">
-            <li class="nav-link"><a href="#"><i class="fas fa-search"></i></a></li>
-            <li class="nav-link"><a href="#">cart</a></li>
-          </ul>
-          <div class="hamburger">
-            <div class="strip"></div>
-            <div class="strip"></div>
-            <div class="strip"></div>
+          <div class="options-box">
+            <div class="colours">
+              <div class="swatch one"></div>
+              <div class="swatch two"></div>
+              <div class="swatch three"></div>
+            </div>
+            <div class="box-size">
+              <div class="size">
+                <h2>xs</h2>
+              </div>
+              <div class="size">
+                <h2>s</h2>
+              </div>
+              <div class="size">
+                <h2>m</h2>
+              </div>
+              <div class="size">
+                <h2>l</h2>
+              </div>
+              <div class="size">
+                <h2>xl</h2>
+              </div>
+            </div>
           </div>
         </div>
-      </nav>
-    </header>
-    <main>
-      <section class="product">
-        <div class="container">
-          <div class="box">
-            <div class="img-box">
-              <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
-            </div>
-            <div class="options-box">
-              <div class="colours">
-                <div class="swatch one"></div>
-                <div class="swatch two"></div>
-                <div class="swatch three"></div>
-              </div>
-              <div class="box-size">
-                <div class="size"><h2>xs</h2></div>
-                <div class="size"><h2>s</h2></div>
-                <div class="size"><h2>m</h2></div>
-                <div class="size"><h2>l</h2></div>
-                <div class="size"><h2>xl</h2></div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    <script src="/js/main.js"></script>
-  </body>
+      </div>
+    </section>
+  </main>
+  <script src="/js/main.js"></script>
+</body>
+
 </html>
