--- a/jackets.html
+++ b/jackets.html
@@ -42,7 +42,8 @@
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link sub-link"><a href="#"><i class="fas fa-shopping-basket"></i></a></li>
+          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          </li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
@@ -51,10 +52,6 @@
             <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
-        </ul>
-        <ul class="nav-menu">
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
-          </li>
         </ul>
         <div class="hamburger">
           <div class="strip"></div>
@@ -67,7 +64,7 @@
   <main>
     <section class="jackets">
       <div class="title">
-        <h1 class="title-text">choose the one you can trust</h1>
+        <h1 class="title-text">choose the one jacket you can trust</h1>
       </div>
       <div class="content">
         <div class="box">
