class adjustments jackets page

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone">
             <h1>that one jacket that you can trust</h1>
           </div>
-          <a href="jackets.html" class="cta__home">Our Jackets</a>
+          <a href="jackets.html" class="cta-home">Our Jackets</a>
         </div>
         <p class="licence">Photo by <a
             href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua
