--- a/jackets.html
+++ b/jackets.html
@@ -72,7 +72,7 @@
             <img src="/images/photos/blake-lisk-swdM6_NFnCs-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Calderon</h3>
             </a>
           </div>
@@ -82,7 +82,7 @@
             <img src="/images/photos/john-vicente-KoPST4OEEQA-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Begsby</h3>
             </a>
           </div>
@@ -92,7 +92,7 @@
             <img src="/images/photos/janko-ferlic-_A1V4vuyXWM-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Aeiron</h3>
             </a>
           </div>
@@ -102,7 +102,7 @@
             <img src="/images/photos/kal-visuals-6TIoPIpMvLc-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Vendela</h3>
             </a>
           </div>
@@ -112,7 +112,7 @@
             <img src="/images/photos/daniel-lincoln-kTChmgdTkwE-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Gedola</h3>
             </a>
           </div>
@@ -122,7 +122,7 @@
             <img src="/images/photos/dmitry-kara-YVkUmYAIJ5Y-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Edilaso</h3>
             </a>
           </div>
@@ -132,7 +132,7 @@
             <img src="/images/photos/durmus-kavcioglu-QPXIVXpW-JU-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Selinium</h3>
             </a>
           </div>
@@ -142,7 +142,7 @@
             <img src="/images/photos/erik-brolin-2_cIV9J4NT8-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Dizela</h3>
             </a>
           </div>
@@ -152,7 +152,7 @@
             <img src="/images/photos/fil-mazzarino-7IimdEvrXH4-unsplash.jpg" alt="">
           </div>
           <div class="text">
-            <a href="product.html" class="cta__home btn">
+            <a href="product.html" class="btn">
               <h3>Dizela</h3>
             </a>
           </div>
