started about page

--- a/about.html
+++ b/about.html
@@ -70,45 +70,39 @@
           No matter the weather
         </p>
       </div>
-      <div><a href="#"><i class="fas fa-chevron-down arrow"></i></a></div>
+      <div>
+        <a href="#"><i class="fas fa-chevron-down arrow"></i></a>
+      </div>
       <div class="text__about bottom-text__about1">
         <p>
-          Our jackets
-        </p>
-      </div>
-      <div class="text__about bottom-text__about2">
-        <p>
-          Will pull
-        </p>
-      </div>
-      <div class="text__about bottom-text__about3">
-        <p>
-          You through
+          Our jackets will pull you through
         </p>
       </div>
     </section>
-    <section class="about-grid">
-      <div class="about-grid-item">
-        <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg"
-          alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background"
-          class="image-left">
+    <section class="content">
+      <div class="box">
+        <div class="img-box">
+          <img src="/images/photos/blake-cheek-dw96lVwMXJg-unsplash.jpg"
+            alt="Young person in a red rain-jacket sitting on a stone in front of a small creek with a waterfall in the background">
+        </div>
+        <div class="">
+          <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain
+            jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the
+            Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is
+            as they say, history…</p>
+        </div>
       </div>
-      <div class="about-grid-item">
-        <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg"
-          alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front"
-          class="image-right">
-      </div>
-      <div class="about-grid-item about-grid-item-text1">
-        <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our
-          natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond
-          with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.
-        </p>
-      </div>
-      <div class="about-grid-item grid-col-span-2 about-grid-item-text2">
-        <p>Soon thereafter, that little shop became known as RainyDays, a retailer of performance all-weather rain
-          jackets. In1995, RainyDays moved to the other side of Humphrey Bay, to the unbridled possibilities of the
-          Riverland area, and began designing and manufacturing its own brand of rugged rain wear jackets. The rest is
-          as they say, history…</p>
+      <div class="box">
+        <div class="img-box">
+          <img src="/images/photos/nina-luong-dy4QG5c5xWQ-unsplash.jpg"
+          alt="Two people in trekking gear standing on the edge of a cliff looking out towards the mountains in front">
+        </div>
+        <div class="">
+          <p>From the beginning, the brand committed to serving all those who desired to explore and to serving our
+            natural wild lands by helping to conserve them. At our core, we believe exploration creates an indelible bond
+            with the outdoors, inspiring people to protect our land and pass these beliefs down to the next generation.
+          </p>
+        </div>
       </div>
     </section>
   </main>
