changed filenames, added cart counter with local strg.

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          <li class="nav-link"><a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
           </li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -106,7 +106,8 @@
       </div>
     </section>
   </main>
-  <script src="/js/main.js"></script>
+  <script src="/js/about.js" type="mocule"></script>
+  <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
