--- a/index.html
+++ b/index.html
@@ -1,97 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content=" RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements. "
+		/>
+		<script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+		<link rel="stylesheet" href="https://use.typekit.net/pnt1end.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
+		<link rel="stylesheet" href="Css/styles.css" />
+		<!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = {
+					hjid: 2968691,
+					hjsv: 6,
+				};
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+		</script>
+		<title>RainyDays|All Weather Jackets Home</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content=" RainyDays jackets have come to be the go to rain jacket for all outdoors adventures, with it's reliable protection and durability against the elements. ">
-  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="Css/styles.css">
-  <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () {
-        (h.hj.q = h.hj.q || []).push(arguments)
-      };
-      h._hjSettings = {
-        hjid: 2968691,
-        hjsv: 6
-      };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script');
-      r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-  </script>
-  <title>RainyDays|All Weather Jackets Home</title>
-</head>
-
-<body>
-  <header>
-    <nav>
-      <div class="list-box">
-        <div class="logo-box">
-          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
-              class="logo"></a>
-        </div>
-        <ul class="nav-menu">
-          <li class="nav-link"><a href="jackets.html">shop</a></li>
-          <li class="nav-link"><a href="about.html">about</a></li>
-          <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
-          </li>
-          <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            </li>
-          </ul>
-        </ul>
-        <div class="hamburger">
-          <div class="strip"></div>
-          <div class="strip"></div>
-          <div class="strip"></div>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section class="home-container">
-      <ul class="social-icons">
-        <li class="social-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        <li class="social-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-        </li>
-        <li class="social-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        </li>
-      </ul>
-      <section class="home-content">
-        <div class="home-box">
-          <div class="home-logo">
-            <img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone">
-            <h1>that one jacket that you can trust</h1>
-          </div>
-          <a href="jackets.html" class="cta-home">Our Jackets</a>
-        </div>
-        <p class="licence">Photo by <a
-            href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Joshua
-            Earle</a> on <a
-            href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-        </p>
-      </section>
-    </section>
-  </main>
-  <footer>
-
-  </footer>
-  <script src="/js/main.js"></script>
-</body>
-
+	<body>
+		<header>
+			<nav>
+				<div class="list-box">
+					<div class="logo-box">
+						<a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
+					</div>
+					<ul class="nav-menu">
+						<li class="nav-link"><a href="jackets.html">shop</a></li>
+						<li class="nav-link"><a href="about.html">about</a></li>
+						<li class="nav-link"><a href="#">contact</a></li>
+						<li class="nav-link">
+							<a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
+						</li>
+						<ul class="social-icons-mobile">
+							<li class="social-link social-sub-link">
+								<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+							</li>
+							<li class="social-link social-sub-link">
+								<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+							</li>
+							<li class="social-link social-sub-link">
+								<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+							</li>
+						</ul>
+					</ul>
+					<div class="hamburger">
+						<div class="strip"></div>
+						<div class="strip"></div>
+						<div class="strip"></div>
+					</div>
+				</div>
+			</nav>
+		</header>
+		<main>
+			<section class="home-container">
+				<ul class="social-icons">
+					<li class="social-link">
+						<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+					</li>
+					<li class="social-link">
+						<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+					</li>
+					<li class="social-link">
+						<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+					</li>
+				</ul>
+				<section class="home-content">
+					<div class="home-box">
+						<div class="home-logo">
+							<img src="/images/icons/rainydays_logo_text-only_small.png" alt="Rainy Days, Pushing the comfort zone" />
+							<h1>that one jacket that you can trust</h1>
+						</div>
+						<a href="jackets.html" class="cta-home">Our Jackets</a>
+					</div>
+					<p class="licence">
+						Photo by
+						<a href="https://unsplash.com/@joshuaearle?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
+							>Joshua Earle</a
+						>
+						on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+					</p>
+				</section>
+			</section>
+		</main>
+		<footer></footer>
+		<script src="/js/main.js" type="module"></script>
+	</body>
 </html>
