--- a/jackets.html
+++ b/jackets.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="description"
+			content=" Discover the Unisex Line of RainyDays Rain Jackets. They will keep your comfortzone closer to the elements. We have fast shipping and well renouned customer service. "
+		/>
+		<script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="https://use.typekit.net/pnt1end.css" />
+		<link rel="stylesheet" href="Css/styles.css" />
+		<!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
+		<script>
+			(function (h, o, t, j, a, r) {
+				h.hj =
+					h.hj ||
+					function () {
+						(h.hj.q = h.hj.q || []).push(arguments);
+					};
+				h._hjSettings = {
+					hjid: 2968691,
+					hjsv: 6,
+				};
+				a = o.getElementsByTagName("head")[0];
+				r = o.createElement("script");
+				r.async = 1;
+				r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+				a.appendChild(r);
+			})(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+		</script>
+		<title>RainyDays|All Jackets</title>
+	</head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description"
-    content=" Discover the Unisex Line of RainyDays Rain Jackets. They will keep your comfortzone closer to the elements. We have fast shipping and well renouned customer service. ">
-  <script src="https://kit.fontawesome.com/fbce6b241f.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://use.typekit.net/pnt1end.css">
-  <link rel="stylesheet" href="Css/styles.css">
-  <!-- Hotjar Tracking Code for https://elegant-allen-d6e03e.netlify.app -->
-  <script>
-    (function (h, o, t, j, a, r) {
-      h.hj = h.hj || function () {
-        (h.hj.q = h.hj.q || []).push(arguments)
-      };
-      h._hjSettings = {
-        hjid: 2968691,
-        hjsv: 6
-      };
-      a = o.getElementsByTagName('head')[0];
-      r = o.createElement('script');
-      r.async = 1;
-      r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
-      a.appendChild(r);
-    })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
-  </script>
-  <title>RainyDays|All Jackets</title>
-</head>
-
-<body class="body__jackets">
-  <header>
-    <nav>
-      <div class="list-box">
-        <div class="logo-box">
-          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
-              class="logo"></a>
-        </div>
-        <ul class="nav-menu">
-          <li class="nav-link"><a href="jackets.html">shop</a></li>
-          <li class="nav-link"><a href="about.html">about</a></li>
-          <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
-          </li>
-          <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            </li>
-          </ul>
-        </ul>
-        <div class="hamburger">
-          <div class="strip"></div>
-          <div class="strip"></div>
-          <div class="strip"></div>
-        </div>
-      </div>
-    </nav>
-  </header>
-  <main>
-    <section class="jackets">
-      <div class="title">
-        <h1 class="title-text">choose the one jacket you can trust</h1>
-      </div>
-      <div class="content products">
-        <!-- <div class="item">
+	<body class="body__jackets">
+		<header>
+			<nav>
+				<div class="list-box">
+					<div class="logo-box">
+						<a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
+					</div>
+					<ul class="nav-menu">
+						<li class="nav-link"><a href="jackets.html">shop</a></li>
+						<li class="nav-link"><a href="about.html">about</a></li>
+						<li class="nav-link"><a href="#">contact</a></li>
+						<li class="nav-link">
+							<a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
+						</li>
+						<ul class="social-icons-mobile">
+							<li class="social-link social-sub-link">
+								<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+							</li>
+							<li class="social-link social-sub-link">
+								<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+							</li>
+							<li class="social-link social-sub-link">
+								<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+							</li>
+						</ul>
+					</ul>
+					<div class="hamburger">
+						<div class="strip"></div>
+						<div class="strip"></div>
+						<div class="strip"></div>
+					</div>
+				</div>
+			</nav>
+		</header>
+		<main>
+			<section class="jackets">
+				<div class="title">
+					<h1 class="title-text">choose the one jacket you can trust</h1>
+				</div>
+				<div class="content products">
+					<!-- <div class="item">
           <div class="box">
             <div class="img-box">
               <img src="/images/photos/blake-lisk-swdM6_NFnCs-unsplash.jpg" alt="">
@@ -175,15 +181,15 @@
             </div>
           </div>
         </div> -->
-      </div>
-      <div class="cart">
-        <div class="cart-list"></div>
-        <div class="total"><h4>Total:</h4></div>
-        <a href="cart.html"><p>Checkout</p></a>
-      </div>
-    </section>
-  </main>
-  <script src="/js/jackets.js" type="module"></script>
-  <script src="/js/main.js"></script>
-</body>
+				</div>
+				<div class="cart">
+					<div class="cart-list"></div>
+					<div class="total"><h4>Total:</h4></div>
+					<a href="cart.html"><p>Checkout</p></a>
+				</div>
+			</section>
+		</main>
+		<script src="/js/jackets.js" type="module"></script>
+		<script src="/js/main.js" type="module"></script>
+	</body>
 </html>
