updated nav on all pages

--- a/jackets.html
+++ b/jackets.html
@@ -41,11 +41,12 @@
 						<a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
 					</div>
 					<ul class="nav-menu">
+						<li class="nav-link"><a href="index.html">home</a></li>
 						<li class="nav-link"><a href="jackets.html">shop</a></li>
 						<li class="nav-link"><a href="about.html">about</a></li>
 						<li class="nav-link"><a href="#">contact</a></li>
 						<li class="nav-link">
-							<a href="cart.html"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
+							<a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
 						</li>
 						<ul class="social-icons-mobile">
 							<li class="social-link social-sub-link">
