--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
 					</div>
 					<ul class="nav-menu">
+						<li class="nav-link"><a href="index.html">home</a></li>
 						<li class="nav-link"><a href="jackets.html">shop</a></li>
 						<li class="nav-link"><a href="about.html">about</a></li>
 						<li class="nav-link"><a href="#">contact</a></li>
