adjusted vertical scroll on index and contact

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<title>RainyDays|All Weather Jackets Home</title>
 	</head>
 
-	<body>
+	<body class="body-home">
 		<header>
 			<nav>
 				<div class="list-box">
