validation form innerhtml + styling

--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,7 @@
 								<div class="form-error" id="addressErr">Enter minimum 25 characters!</div>
 							</div>
 							<button class="btn all">SEND</button>
+							<div class="formError red"></div>
 						</form>
           </div>
         </div>
