finished styling form

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,31 @@
 		<main>
 			<div class="container">
         <div class="form">
-          <div class="contact-info"></div>
+          <div class="contact-info">
+						<h2>Get in touch!</h2>
+						<p>You can reach us at our shop which is located at the heart of Oslo, between the church and the main street Karl Johan!</p>
+						<div class="info">
+							<div class="information">
+								<div class="icon"><i class="fas fa-map-marker-alt"></i></i></div>
+								<p class="adresse">Karl Johans gate 47, 0342 Oslo</p>
+							</div>
+							<div class="information">
+								<div class="icon"><i class="fas fa-envelope"></i></i></div>
+								<p>post@rainydays.com</p>
+							</div>
+							<div class="information">
+								<div class="icon"><i class="fas fa-phone-alt"></i></div>
+								<p>+47 22946248</p>
+							</div>
+							<div class="contact-container">									 
+								<div class="social-contact">
+									<a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+									<a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+									<a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+								</div>							
+							</div>
+						</div>
+					</div>
           <div class="contact-form">
 						<form id="contact-form">
 							<h3 class="form-title">Contact us!</h3>
