linking and updating nav on all pages

--- a/cart.html
+++ b/cart.html
@@ -44,9 +44,9 @@
 						<li class="nav-link"><a href="index.html">home</a></li>
 						<li class="nav-link"><a href="jackets.html">shop</a></li>
 						<li class="nav-link"><a href="about.html">about</a></li>
-						<li class="nav-link"><a href="#">contact</a></li>
+						<li class="nav-link"><a href="contact.html">contact</a></li>
 						<li class="nav-link">
-							<a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
+							<a href="cart.html"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
 						</li>
 						<ul class="social-icons-mobile">
 							<li class="social-link social-sub-link">
