--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
           <li class="nav-link"><a href="about.html">about</a></li>
           <li class="nav-link"><a href="contact.html">contact</a></li>
           <li class="nav-link">
-            <a href="#"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
+            <a href="cart.html"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
           </li>
           <ul class="social-icons-mobile">
             <li class="social-link social-sub-link">
