--- a/product.html
+++ b/product.html
@@ -35,21 +35,25 @@
     <nav>
       <div class="list-box">
         <div class="logo-box">
-          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
-              class="logo"></a>
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
         </div>
         <ul class="nav-menu">
+          <li class="nav-link"><a href="index.html">home</a></li>
           <li class="nav-link"><a href="jackets.html">shop</a></li>
           <li class="nav-link"><a href="about.html">about</a></li>
-          <li class="nav-link"><a href="#">contact</a></li>
-          <li class="nav-link"><a href="#"><i class="fas fa-shopping-basket"></i></a>
+          <li class="nav-link"><a href="contact.html">contact</a></li>
+          <li class="nav-link">
+            <a href="cart.html"><span id="cart"></span><i class="fas fa-shopping-basket"></i></a>
           </li>
           <ul class="social-icons-mobile">
-            <li class="social-link social-sub-link"><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+            <li class="social-link social-sub-link">
+              <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
             </li>
-            <li class="social-link social-sub-link"><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+            <li class="social-link social-sub-link">
+              <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
             </li>
-            <li class="social-link social-sub-link"><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <li class="social-link social-sub-link">
+              <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
             </li>
           </ul>
         </ul>
