--- a/product.html
+++ b/product.html
@@ -35,7 +35,8 @@
     <nav>
       <div class="list-box">
         <div class="logo-box">
-          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+              class="logo" /></a>
         </div>
         <ul class="nav-menu">
           <li class="nav-link"><a href="index.html">home</a></li>
@@ -67,8 +68,19 @@
   </header>
   <main>
     <section class="product">
-      <div class="container">
-        
+      <div class="title">
+        <h1 class="title-text">choose the one jacket you can trust</h1>
+      </div>
+      <div class="content products">
+      </div>
+      <div class="cart">
+        <div class="cart-list"></div>
+        <div class="total">
+          <h4>Total:</h4>
+        </div>
+        <a href="cart.html">
+          <p>Checkout</p>
+        </a>
       </div>
     </section>
   </main>
