--- a/product.html
+++ b/product.html
@@ -67,7 +67,7 @@
     </nav>
   </header>
   <main>
-    <section class="jacket">
+    <section class="Jackets">
       <div class="title">
         <h1 class="title-text">choose the one jacket you can trust</h1>
       </div>
