--- a/product.html
+++ b/product.html
@@ -67,7 +67,7 @@
     </nav>
   </header>
   <main>
-    <section class="Jackets">
+    <section class="jackets">
       <div class="title">
         <h1 class="title-text">choose the one jacket you can trust</h1>
       </div>
@@ -75,12 +75,8 @@
       </div>
       <div class="cart">
         <div class="cart-list"></div>
-        <div class="total">
-          <h4>Total:</h4>
-        </div>
-        <a href="cart.html">
-          <p>Checkout</p>
-        </a>
+        <div class="total"><h4>Total:</h4></div>
+        <a href="cart.html"><p>Checkout</p></a>
       </div>
     </section>
   </main>
