updated script link in specific.html

--- a/specific.html
+++ b/specific.html
@@ -80,7 +80,7 @@
       </div>
     </section>
   </main>
-  <script src="/js/product.js" type="module"></script>
+  <script src="/js/specific.js" type="module"></script>
   <script src="/js/main.js"></script>
 </body>
 
