updated template literals specific.js + module script updates

--- a/checkout.html
+++ b/checkout.html
@@ -35,7 +35,8 @@
     <nav>
       <div class="list-box">
         <div class="logo-box">
-          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo" class="logo" /></a>
+          <a href="index.html"><img src="/images/icons/rainydays_logo_no_slogan.png" alt="RainyDays Logo"
+              class="logo" /></a>
         </div>
         <ul class="nav-menu">
           <li class="nav-link"><a href="index.html">home</a></li>
@@ -107,7 +108,7 @@
       </div>
     </section>
   </main>
-  <script src="/js/main.js"></script>
+  <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
