--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
       </div>
 		</main>
 		<footer></footer>
-		<script src="/js/form.js"></script>
+		<script src="/js/form.js" type="module"></script>
 		<script src="/js/main.js" type="module"></script>
 	</body>
 </html>
