--- a/specific.html
+++ b/specific.html
@@ -81,7 +81,7 @@
     </section>
   </main>
   <script src="/js/specific.js" type="module"></script>
-  <script src="/js/main.js"></script>
+  <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
